Integ test
Signed-off-by: Varun Jain <varunudr@amazon.com>